@@ -7,6 +7,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Allow '+' and '.' in distribution names in Debian changelogs.
     Based on a patch by John Wright.
     Closes: #361171
+  * Use the Debian keyring in dpkg-source when checking signatures
+    of .dsc files, if available. Closes: #364726
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
