@@ -7,6 +7,13 @@
 	are matched by a way stricter regex. (Characters now
 	allowed are '+' and '.').
 
+2006-05-10  Robert Millan  <rmh@aybabtu.com>,
+	    Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-source.pl: When checking the
+	signature of a .dsc file, use the Debian
+	keyring if available.
+
 2006-05-04  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.20~.
